changes in properties file

--- a/artifacts/src/i18n/regclient-i18n-bundle/labels_kn.properties
+++ b/artifacts/src/i18n/regclient-i18n-bundle/labels_kn.properties
@@ -126,8 +126,8 @@ preview= ಪೂರ್ವವೀಕ್ಷಣೆ
 #Edit option used to edit/modify by navigating from preview screen
 edit=ಸಂಪಾದಿಸು
 #Preview Template
-preRegistrationId=ಪೂರ್ವ-ನೋಂದಣಿ ID
-applicationId=ಅಪ್ಲಿಕೇಶನ್ ID
+preRegistrationId=ಪೂರ್ವ-ನೋಂದಣಿ ಐಡಿ
+applicationId=ಅಪ್ಲಿಕೇಶನ್ ಐಡಿ
 #exception=ಫಿಂಗರ್‌ಪ್ರಿಂಟ್ ವಿನಾಯಿತಿ
 demographicInformation=ಜನಸಂಖ್ಯಾ ಮಾಹಿತಿ
 years= ವರ್ಷಗಳು
