--- a/artifacts/src/i18n/regclient-i18n-bundle/messages_en.properties
+++ b/artifacts/src/i18n/regclient-i18n-bundle/messages_en.properties
@@ -136,7 +136,7 @@ SCAN_DOCUMENT_CONNECTION_ERR = Unable to connect to the scanner#TYPE#ERROR
 SCAN_DOCUMENT_EMPTY = Scan atleast 1 document to save#TYPE#INFO
 SCAN_DOCUMENT_CONVERTION_ERR = Unable to convert the scanned files in the configured Format#TYPE#ERROR
 PRE_REG_ID_EMPTY = Please enter the pre-registration id.#TYPE#INFO
-PRE_REG_ID_NOT_VALID = Please enter a valid Pre-Registration ID.#TYPE#ERROR
+PRE_REG_ID_NOT_VALID = Pre-Registration ID has been consumed.#TYPE#ERROR
 REG_LGN_001=is required#TYPE#INFO
 IS_BLOCKED_WORD=is bl11ocked word#TYPE#INFO
 REG_DDC_004=is invalid#TYPE#INFO
@@ -252,7 +252,7 @@ BIOMETRIC_EXCEPTION_ALERT = You have to select atleast one exception#TYPE#INFO
 
 #USER ONBOARD
 UNABLE_LOAD_USERONBOARD_SCREEN = Unable to load User Onboard Screen#TYPE#ERROR
-USER_MACHINE_VALIDATION_MSG =User-Machine center mapping doesn't match.#TYPE#ERROR
+USER_MACHINE_VALIDATION_MSG = User-Machine center mapping doesn't match.#TYPE#ERROR
 USER_ON_BOARDING_THRESHOLD_NOT_MET_MSG=Threshold for number of successful authentications not met.#TYPE#ERROR
 USER_ONBOARD_HI=Hi
 USER_ONBOARD_NOTONBOARDED=you are not onboarded into the system.
@@ -363,9 +363,9 @@ EOD_STATUS_LABEL=Status
 #Notification Message
 EMAIL_ERROR_MSG=Unable to send email notification#TYPE#ERROR
 SMS_ERROR_MSG=Unable to send sms notification#TYPE#ERROR
-INVALID_DATE=Date is invalid
 DOB_REQUIRED=DOB / Age is required
-INVALID_AGE=Maximum allowed age is 
+INVALID_DATE=Date is invalid
+INVALID_AGE=Maximum allowed age is {0}
 INVALID_MONTH=Month is invalid
 INVALID_YEAR=Year is invalid
 FUTURE_DOB=Future Date of birth is not allowed
@@ -462,11 +462,12 @@ INVALID_PORT_RANGE=Please enter valid Port Range.#TYPE#ERROR
 PORT_RANGE_MODIFIED_SUCCESSFULLY=Port Range has been modified successfully#TYPE#SUCCESS
 
 SCREEN_VALIDATION_ERROR=Found fields with error, kindly correct to continue.
-INVALID_DATE_LIMIT=Please enter a date within (days) 
+INVALID_DATE_LIMIT=Please enter a date within {0} to {1} (days) 
 NO_OR_INVALID_POLICY_KEY=Please sync to download machine specific policy key to proceed with registration
 RESTART_MSG = Application restart is needed to see the configuration sync changes. Do you want to quit now?
 LOGOUT_ALERT = Your roles have been modified. The current session will be logged out. Please login again to continue.
 
 INVALID_FLOW_TYPE=Invalid registration flow type!
 ADDITIONAL_INFO_REQ_ID_MISSING=AdditionalInfo request id is required to proceed.
+
 TOKEN_SAVE_FAILED=Failed to save auth-token, Invalid token / token too large.#TYPE#ERROR
